--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">IngatIn</string>
-    <string name="button_label_toast">Toast</string>
-    <string name="button_label_count">Count</string>
-    <string name="count_initial_value">0</string>
-    <string name="toast_message">Hello Toast!</string>
+
+    <string name="label_initial">None</string>
+    <string name="label_title">Label</string>
+
+    <string name="alert_mode_title">Alert Mode</string>
+    <string name="alert_mode_initial">Ring</string>
+    <string name="ringtone_initial">Beautiful Touching</string>
+    <string name="ringtone_title">Ringtone</string>
+
 </resources>
