--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,16 @@
     <string name="alert_mode_initial">Ring</string>
     <string name="ringtone_initial">Beautiful Touching</string>
     <string name="ringtone_title">Ringtone</string>
+    <string name="pick">Pick</string>
+    <string name="button_back">Back</string>
+    <string name="button_ok">OK</string>
+    <string name="label_hint">Alarm Label</string>
+    <string name="title_activity_test_change_layout">Map</string>
+    <string name="choose">Choose</string>
+
+    <string name="sample">Lorem ipsum dolor sit amet</string>
+    <string name="location_sample">Jl. A.B.C.D</string>
+    <string name="location_title">Choose the designated location</string>
+    <string name="title_activity_change_location">Map</string>
 
 </resources>
